[package]
name = "astrid-capsule-http"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "HTTP fetch tool for Astrid agents"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
astrid-sdk = { workspace = true, features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
extism-pdk = "1.4.1" # required by #[capsule] macro-generated code
