[package]
name = "astrid-capsule-memory"
version = "0.1.0"
edition = "2024"
description = "Cross-session memory capsule for Astrid OS"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
astrid-sdk = { path = "../astrid-sdk", features = ["derive"] }
extism-pdk = "1.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
