[package]
name = "astrid-capsule-react"
version = "0.1.0"
edition = "2024"
description = "The default LLM reasoning and execution loop for Astrid OS"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
astrid-sdk = { path = "../astrid-sdk", features = ["derive"] }
astrid-events = { path = "../astrid-events", default-features = false }
extism-pdk = "1.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
borsh = { version = "1.6", features = ["derive"] }
